Added codeblock component

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -59,4 +59,9 @@
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
+
+  .hljs,
+  .hljs-subst {
+    @apply text-sm;
+  }
 }
